# clf-to-sqlite

./: .gitattributes  .gitignore  README.html  README.md  build  meson.build  notes.html  run_tests  stage_weblog.gs  test_runner
docs/: notes.html
src/: LogHit.gs  init.gs
tests/: run_tests  test001  test002  test003  test004  test005  test006  test007  test008  test009  test010  test011  test012  test013  test014  test015  test016  test017  test018  test019  test020  test021  test022  test023  test024  test025
tests/expected_results/: test001  test002  test003  test004  test005  test006  test007  test009  test010  test011  test012  test013  test014  test015  test020  test021  test025
tests/source_data/: sample_log_file  test006.sqlite  test007  test008  test009  test010  test011  test012  test013  test014  test022  test023
